# design_patterns

./: README.md
src/abstract_factory/: abstract_factory.h  abstract_product_a.h  abstract_product_b.h  client.h  factory1.h  factory2.h  product_a1.h  product_a2.h  product_b1.h  product_b2.h
src/builder/: client.h  fat_people_builder.h  people.h  people_builder.h  people_director.h  slim_people_builder.h
src/chain_of_responsibility/: client.h  handler.h  request.h
src/command/: client.h  command.h  invoker.h  receiver.h
src/decorator/: client.h  component.h  concrete_decorator.h  decorator.h
src/memento/: client.h  game_role.h
src/observer/: client.h  concrete_observer_a.h  concrete_observer_b.h  concrete_subject.h  observer.h  subject.h
src/proxy/: client.h  common_interface.h  proxy.h  real.h
src/simple_factory/: client.h  operation.h  operation_add.h  operation_div.h  operation_factory.h  operation_mul.h  operation_sub.h
src/singleton/: hungry_singleton.h  lazy_singleton.h  lock_singleton.h
src/state/: client.h  state.h  state_afternoon.h  state_evening.h  state_morning.h  work.h
src/strategy/: client.h  context.h  (+5 more)
test/: CMakeLists.txt
test/abstract_factory/: client_test.cc
test/builder/: client_test.cc
test/chain_of_responsibility/: client_test.cc
test/command/: client_test.cc
test/decorator/: client_test.cc
test/memento/: client_test.cc
test/observer/: client_test.cc
test/proxy/: client_test.cc
test/simple_factory/: client_test.cc
test/singleton/: client_test.cc
test/state/: client_test.cc
test/strategy/: client_test.cc
